[package]
name = "diogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dioxus = { version = "0.2.3", features = ["web", "fermi"] }
dioxus-heroicons = { git = "https://github.com/mrxiaozhuox/dioxus-heroicons" }
dioxus-toast = "0.1.3"

markdown-meta-parser = "0.1.1"

wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
web-sys = "0.3.56"
js-sys = "0.3.56"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasm-logger = "0.2.0"
log = "0.4.14"
reqwasm = { version = "0.5.0", features = ["json"] }
url = "2.2.2"
base64 = "0.13.0"